# SparseCondLab

./: .gitignore  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
.github/: copilot-instructions.md
docs/reports/: 2026-04-03-krylov-benchmark-report.md  2026-04-03-krylov-benchmark-suite-report.md
docs/superpowers/plans/: 2026-04-03-krylov-benchmark-trend.md
src/sparsecondlab/: __init__.py  benchmark.py  cli.py  condest.py  io.py  krylov.py  krylov_report.py  matrix_families.py  report.py  shards.py
tests/: test_benchmark.py  test_benchmark_cli.py  test_cli.py  test_condest.py  test_condest_analytical.py  test_io.py  test_krylov_benchmark.py  test_krylov_report.py  test_matrix_families.py  test_shards.py
tests/data/: block_diag_manifest.json  real_example.mtx  symmetric_example.mtx
